--- a/templates/etc/squid3/squid.conf.erb
+++ b/templates/etc/squid3/squid.conf.erb
@@ -1079,7 +1079,7 @@ http_access deny all
 #
 
 # Squid normally listens to port 3128
-http_port 3128
+http_port <%= http_port %>
 
 #  TAG: https_port
 # Note: This option is only available if Squid is rebuilt with the
